--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,4 +1,15 @@
 body {
   background-color: #FDF0D5;
   color: #3A3335;
+  font-size: 62.5%;
+  font-family: 'Work sans', sans-serif;
+}
+
+p {
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+a {
+  color: inherit;
 }
