--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #FDF0D5;
   color: #3A3335;
@@ -12,4 +16,13 @@ p {
 
 a {
   color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.link {
+  color: #F0544F;
 }
